dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/port.c)

dnl Parse options
AC_ARG_WITH(default-dev, [  --with-default-dev=DEV  specify default terminal device], defaultdev=$withval)

if test "$defaultdev" != ""
then
	AC_DEFINE_UNQUOTED(DEFAULT_DEVICE, "$defaultdev")
fi

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS(select)

AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile src/Makefile)

